Update WordPress 4.5.2 builder

--- a/src/wordpress-4.5.2/woocommerce-2.5.5/Dockerfile
+++ b/src/wordpress-4.5.2/woocommerce-2.5.5/Dockerfile
@@ -12,8 +12,8 @@ ADD ./wait-for-it.sh ./wait-for-it.sh
 RUN chmod +x ./wait-for-it.sh
 
 # INSTALL.sh
-ADD ./install.sh ./wordpress-4.5.2-woocommerce-2.5.5-install.sh
-RUN chmod +x ./wordpress-4.5.2-woocommerce-2.5.5-install.sh
+ADD ./install.sh ./install.sh
+RUN chmod +x ./install.sh
 
 # WP-CLI
 RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
@@ -23,4 +23,3 @@ RUN mv wp-cli.phar /usr/local/bin/wp
 ADD . ./wordpress-4.5.2/woocommerce-2.5.5
 
 EXPOSE 80
-EXPOSE 8080
