--- a/templates/Dockerfile
+++ b/templates/Dockerfile
@@ -1,19 +1,6 @@
 FROM php:5.6-apache
+
 LABEL maintainer "Guzzilar"
-
-RUN usermod -u 1000 www-data
-
-# ...
-# ... Add the system requirements here.
-# ...
-
-# WAIT-FOR-IT.sh.
-ADD ./bin/wait-for-it /var/www/bin/wait-for-it
-RUN chmod +x /var/www/bin/wait-for-it
-
-# INSTALL.sh.
-ADD ./bin/install /var/www/bin/install
-RUN chmod +x /var/www/bin/install
 
 ENV APACHE_RUN_USER www-data
 ENV APACHE_RUN_GROUP www-data
@@ -22,8 +9,34 @@ ENV APACHE_PID_FILE /var/run/apache2.pid
 ENV APACHE_RUN_DIR /var/run/apache2
 ENV APACHE_LOCK_DIR /var/lock/apache2
 
-RUN mkdir -p $APACHE_RUN_DIR $APACHE_LOCK_DIR $APACHE_LOG_DIR
+RUN echo "mysql-server mysql-server/root_password password root" | debconf-set-selections
+RUN echo "mysql-server mysql-server/root_password_again password root" | debconf-set-selections
 
-COPY ./tmp /tmp/building/
+RUN apt-get update && apt-get install -y --force-yes \
+    unzip \
+    vim \
+    mysql-client \
+    mysql-server \
+    && rm -rf /var/lib/apt
+
+RUN docker-php-ext-install mysqli
+
+# ...
+# ... Add the system requirements here.
+# ...
+
+# Add INSTALL.sh.
+COPY ./bin/install /var/www/bin/install
+RUN chmod +x /var/www/bin/install
+
+# Download WP-CLI
+RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
+RUN chmod +x wp-cli.phar
+RUN mv wp-cli.phar /usr/local/bin/wp
+
+# Apache configuration
+RUN mkdir -p $APACHE_RUN_DIR $APACHE_LOCK_DIR $APACHE_LOG_DIR
+RUN a2enmod rewrite
+RUN chown www-data:www-data -R /var/www/html/
 
 EXPOSE 80
