--- a/src/latest/default.env
+++ b/src/latest/default.env
@@ -1,16 +1,16 @@
 # Set database credential
-DB_HOST="127.0.0.1"
-DB_NAME="www"
-DB_USER="root"
-DB_PASSWORD="root"
+DB_HOST=127.0.0.1
+DB_NAME=www
+DB_USER=root
+DB_PASSWORD=root
 
 # Set WordPress environments
 WP_VERSION=
-WP_TITLE="WooCommerceStore"
-WP_BASE_URL="http://127.0.0.1"
+WP_TITLE=WooCommerceStore
+WP_BASE_URL=http://127.0.0.1
 
 # Set admin account
-WP_ADMIN_USER="admin"
-WP_ADMIN_PASSWORD="password"
-WP_ADMIN_EMAIL="iam.nuttanon@gmail.com"
+WP_ADMIN_USER=admin
+WP_ADMIN_PASSWORD=password
+WP_ADMIN_EMAIL=iam.nuttanon@gmail.com
 
